new button added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         return of the king
     </article>
     <div class="reza" >
-        
+        <button  class="btn" >
+            click me
+        </button>
     </div>
 </body>
 </html>
